--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -635,6 +635,7 @@
      font-size: 28px;
      font-family: MavenPro Regular;
      color: #000;
+     text-align: justify;
 }
  .about .content .btn-learn-more {
      font-weight: 700;
@@ -690,8 +691,8 @@
      display: flex;
      flex-direction: column;
      padding-bottom: 65px;
-     justify-content: flex-end;
-     min-height: 416px;
+     justify-content: center;
+     min-height: 100%;
      color: var( --bs-white) ;
 }
 .companyintro .bluebox .content{
@@ -723,8 +724,7 @@
     line-height: 26px;
     margin-bottom: 40px;
     font-family: MavenPro Medium;
-     margin-bottom: 40px;
-     font-family: MavenPro Medium;
+    text-align: justify;
 }
  .bluebox .btn-learn-more {
      bottom: 72px;
@@ -782,11 +782,7 @@
          font-weight: 400;
          line-height: 36px;
     }
-     .bluebox .content p {
-         font-size: 24px;
-         line-height: 28px;
-         margin-bottom: 43px;
-    }
+    
      .bluebox .content {
          padding: 32px 52px;
     }
@@ -824,6 +820,7 @@
      font-family: MavenPro Regular;
      color: #000;
      margin-bottom: 32px;
+         text-align: justify;
 }
  .whoweare .content .btn-learn-more {
      font-weight: 700;
@@ -867,7 +864,6 @@
      padding-top: 64px;
      padding-bottom: 163px;
      position: relative;
-     background-image: url(../img/vectorimg.svg);
      background-position: right bottom;
 }
  .casestudy.casestudyinner{
@@ -1039,8 +1035,22 @@
      justify-content: flex-end;
 }
  .goal.contentonly .hoverbox {
-padding: 64px 32px;
+padding: 32px 32px;
 justify-content: flex-start;
+    min-height: 300px;
+ }
+ .goal.contentonly .columnbox3:nth-child(even) .hoverbox{
+     background: rgba(1, 30, 65, 1);
+     color: #fff !important;
+ }
+ .goal.contentonly .columnbox3:nth-child(even) .hoverbox .content-title h3{
+color: #fff;
+ }
+ .goal.contentonly .hoverbox .content-title h3 {
+    margin-bottom: 27px;
+ }
+ .goal.contentonly .hoverbox p{
+     text-align: justify;
  }
  .goal .hoverbox .content-title h3 {
      margin-bottom: 37px;
@@ -1430,6 +1440,7 @@ justify-content: flex-start;
      font-family: MavenPro Regular;
      color: #000;
      margin-bottom: 0px;
+     text-align: justify;
 }
  .overview .content .btn-learn-more {
      font-weight: 700;
@@ -1477,6 +1488,7 @@ justify-content: flex-start;
      font-family: MavenPro Regular;
      color: #000;
      margin-bottom: 64px;
+     text-align: justify;
 }
  .description .content p.mr-btm-32 {
      margin-bottom: 32px;
@@ -1546,6 +1558,7 @@ justify-content: flex-start;
      font-size: 24px;
      line-height: 29px;
      margin-bottom: 0px;
+     text-align: justify;
 }
 .worldaround .largedata .contentbox{
    min-height: 385px; 
@@ -1609,6 +1622,7 @@ justify-content: flex-start;
      font-size: 28px;
      line-height: 40px;
      margin-bottom: 32px;
+     text-align: justify;
 }
  @media(max-width:767px){
      .approach .content p{
@@ -1636,6 +1650,7 @@ justify-content: flex-start;
      font-size: 16px;
      line-height: 22px;
      margin-bottom: 0px;
+     text-align: justify;
 }
  .masonry-layout.no-content .contentbluebox{
    min-height: auto;
@@ -1761,6 +1776,7 @@ justify-content: flex-start;
      color: rgba(1, 30, 65, 1);
      padding-right: 8px;
      margin-bottom: 0px;
+     text-align: left;
 }
  @media(max-width:767px){
      .steps .step .content h3{
@@ -2069,10 +2085,10 @@ justify-content: flex-start;
 }
  @media(min-width:1600px) and (max-width:1799px){
      .bluebox .content{
-         height: 465px;
+         height: 100%;
     }
      .bluebox .imagecontent {
-         height: 465px;
+         height: 100%;
     }
        .companyintro .bluebox .content{
           min-height: 100%;  
@@ -2083,9 +2099,10 @@ justify-content: flex-start;
  .services{
      background: #fff;
 }
- .services .container-fluid {
-     max-width: 1440px;
-}
+ /* .services .container-fluid {
+    max-width: calc(100% - 268px);
+    width: calc(100% - 268px);
+} */
 
 .service-banner-1{
 background: url(../img/services/banner/services_cx_audits_img.jpg) !important;
